# backend-fltshr/src/main/java/com/zychp/backendfltshr/model/chore/frequentchores/FrequentChoreCDTO.java
@@ -1,5 +1,6 @@
 package com.zychp.backendfltshr.model.chore.frequentchores;
 
+import com.zychp.backendfltshr.model.user.UserNameDTO;
 import lombok.Data;
 
 @Data
@@ -8,13 +9,15 @@ public class FrequentChoreCDTO {
     private String description;
     private Long durationDays;
     private Long frequencyDays;
+    private UserNameDTO user;
+    private String date;
 
     public static FrequentChore valueOf(FrequentChoreCDTO dto) {
         FrequentChore entity = new FrequentChore();
         entity.setName(dto.getName());
         entity.setDescription(dto.getDescription());
         entity.setDurationDays(dto.getDurationDays());
-        entity.setFrequencyDays(dto.getDurationDays());
+        entity.setFrequencyDays(dto.getFrequencyDays());
         return entity;
     }
 }
